--- a/project/package.json
+++ b/project/package.json
@@ -10,23 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "framer-motion": "^11.0.3",
-    "react-intersection-observer": "^9.8.0",
-    "react-scroll": "^1.9.0",
-    "react-icons": "^5.0.1",
-    "@emailjs/browser": "^4.1.0",
-    "react-type-animation": "^3.2.0",
+    "@emailjs/browser": "^4.4.1",
     "aos": "^2.3.4",
-    "react-router-dom": "^6.22.1",
-    "react-vertical-timeline-component": "^3.6.0",
+    "framer-motion": "^11.0.3",
+    "react": "^18.3.1",
+    "react-countup": "^6.5.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.0",
     "react-parallax": "^3.5.1",
     "react-particles": "^2.12.2",
-    "tsparticles": "^2.12.0",
+    "react-router-dom": "^6.22.1",
+    "react-scroll": "^1.9.0",
     "react-tilt": "^1.0.2",
-    "react-countup": "^6.5.0",
-    "swiper": "^11.0.6"
+    "react-toastify": "^11.0.5",
+    "react-type-animation": "^3.2.0",
+    "react-vertical-timeline-component": "^3.6.0",
+    "swiper": "^11.0.6",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
